<resources>
	<string name="app_name">Stegnography</string>
	<string name="name">Name</string>
	<string name="title_activity_user_details">UserDetails</string>
	<!-- Strings used for fragments for navigation -->
	<string name="first_fragment_label">First Fragment</string>
	<string name="second_fragment_label">Second Fragment</string>
	<string name="next">Next</string>
	<string name="previous">Previous</string>
	
	<string name="hello_first_fragment">Hello first fragment</string>
	<string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
	<string name="title_activity_login">MainActivity</string>
	<string name="title_home">Home</string>
	<string name="title_dashboard">Dashboard</string>
	<string name="title_notifications">Notifications</string>
	<string name="register_user">Register User</string>
	<string name="booking">Booking</string>
	<string name="mybooking">My Booking</string>
	<string name="getroute">Get Route</string>
	<string name="my_account">My Account</string>
	<string name="enter_time">Enter Time</string>
	<string name="select_date">Select Date</string>
	<string name="type">TYPE of Parking Slot Available</string>
	<string name="submit">Submit</string>
	<string name="button1">Confirm Booking</string>
	<string name="cost_details">Get Details</string>
	<string name="slot_2">Slot 2</string>
	<string name="slot_1">Slot 1</string>
	<string name="slot_4">Slot 4</string>
	<string name="slot_3">Slot 3</string>
	<string name="user_login">User Login</string>
	<string name="enter_email">Enter Email</string>
	<string name="enter_password">Enter Password</string>
	<string name="login">SIGN IN</string>
	<string name="not_have_an_account_register_here">Not Have An Account? Register Here.</string>
	<string name="already_register_sign_here">Already Register Login Here</string>
	<string name="book_my_parking_slot">Book My Parking Slot</string>
	<string name="show_slot">Show Slot</string>
	<string name="show_route">Show Route</string>
	<string name="enter_name">Enter Name</string>
	<string name="enter_number">Enter Number</string>
	<string name="information">Information</string>
	<string name="logout">logout</string>
	<string name="vehicle_not_present">Vehicle Not Present</string>
	<string name="vehicle_present">Vehicle Present</string>
	<string name="date23">date</string>
	<string-array name="Select">
		<item>Shaded</item>
		<item>UnShaded</item>
	</string-array>
	<string name="title_activity_user1">FullscreenActivity</string>
	<string name="dummy_button">Dummy Button</string>
	<string name="dummy_content">DUMMY\nCONTENT</string>
	<string name="prompt_email">Email</string>
	<string name="prompt_password">Password</string>
	<string name="action_sign_in">Sign in or register</string>
	<string name="action_sign_in_short">Sign in</string>
	<string name="welcome">"Welcome !"</string>
	<string name="invalid_username">Not a valid username</string>
	<string name="invalid_password">Password must be >5 characters</string>
	<string name="login_failed">"Login failed"</string>
	<string name="select_image">Select image</string>
	<string name="image">Image</string>
	<string name="title_activity_display_encoded_image">DisplayEncodedImage</string>
	<string name="get_images">Get Images</string>
	<string name="choose_image">Choose Image</string>
	<string name="secret_key">Secret Key -</string>
	<string name="enter_secret_key">Enter secret key</string>
	<string name="encode">Encode</string>
	<string name="save_image">Save Image</string>
	<string name="image_for_encoding">Image for encoding</string>
	<string name="get_image">Get Image</string>
	<string name="your_message">Your message</string>
	<string name="decode">Decode</string>
	<string name="message">Message</string>
</resources>
