<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".Login">
	<LinearLayout
		android:layout_margin="15dp"
		android:layout_centerHorizontal="true"
		android:layout_centerVertical="true"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		tools:ignore="MissingConstraints">
		
		<TextView
			android:id="@+id/loginlabel"
			android:textAppearance="@style/TextAppearance.AppCompat.Large"
			android:layout_gravity="center_horizontal"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/user_login" />
		
		<EditText
			android:layout_margin="15dp"
			android:inputType="textEmailAddress"
			android:hint="@string/enter_email"
			android:id="@+id/edittextemail_login"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:importantForAutofill="no" />
		
		<EditText
			android:layout_margin="15dp"
			android:inputType="textPassword"
			android:hint="@string/enter_password"
			android:id="@+id/edittextpass_login"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:importantForAutofill="no" />
		
		<Button
			android:id="@+id/buttonSignIn__login"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_margin="15dp"
			android:text="@string/login" />
		
		<TextView
			style="@style/TextAppearance.AppCompat.Widget.Button.Colored"
			android:id="@+id/textviewsignin_login"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:clickable="true"
			android:text="@string/not_have_an_account_register_here"
			android:textAlignment="center"
			android:textColor="#0B0B0B"
			android:gravity="center_horizontal"
			android:layout_gravity="center"
			android:focusable="true" />
	</LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>