<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".MainActivity">
	
	
	<LinearLayout
		android:id="@+id/linearLayout"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_centerHorizontal="true"
		android:layout_centerVertical="true"
		android:layout_margin="15dp"
		android:layout_marginStart="14dp"
		android:layout_marginLeft="14dp"
		android:layout_marginEnd="14dp"
		android:layout_marginRight="14dp"
		android:focusable="true"
		android:orientation="vertical"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		tools:ignore="MissingConstraints">
		
		<TextView
			android:id="@+id/UserRegister"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:clickable="false"
			android:text="@string/register_user"
			android:textAppearance="@style/TextAppearance.AppCompat.Large" />
		
		<EditText
			android:id="@+id/edittextemail"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_margin="15dp"
			android:focusable="true"
			android:hint="@string/enter_email"
			android:importantForAutofill="no"
			android:inputType="textEmailAddress" />
		
		<EditText
			android:id="@+id/edittextpass"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_margin="15dp"
			android:focusable="true"
			android:hint="@string/enter_password"
			android:importantForAutofill="no"
			android:inputType="textPassword" />
		
		<Button
			android:id="@+id/buttonRegister"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_margin="15dp"
			android:focusable="true"
			android:text="@string/register_user" />
		
		<TextView
			android:id="@+id/textviewsignin"
			style="button"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:clickable="true"
			android:focusable="true"
			android:gravity="center_horizontal"
			android:text="@string/already_register_sign_here"
			android:textAlignment="center"
			android:textColor="#0B0B0B"
			android:textSize="14sp"
			android:textStyle="normal" />
	
	</LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>